# kumiho-SDKs

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  README.md  RELEASE_NOTES.md  debug_cp_jwt.py  debug_default_artifact.py  test_autologin.py  test_summarization.py  vcpkg.json  verify_cp_auth.py
app/: kumiho_listener.cpp
client/: kumiho.cpp  kumiho_client_example.cpp
cpp/: CMakeLists.txt  Doxyfile  README.md
cpp/.github/workflows/: docs-publish.yml
cpp/cmake/: kumiho-config.cmake.in
cpp/docs/: Doxyfile.sphinx
cpp/include/kumiho/: artifact.hpp  bundle.hpp  client.hpp  discovery.hpp  edge.hpp  error.hpp  event.hpp  item.hpp  project.hpp  revision.hpp  space.hpp  token_loader.hpp  types.hpp
cpp/scripts/: build_and_ctest.ps1
cpp/src/: bundle.cpp  client.cpp  discovery.cpp  event.cpp  group.cpp  item.cpp  kref.cpp  project.cpp  resource.cpp  revision.cpp  space.cpp  token_loader.cpp  version.cpp
cpp/tests/: test_discovery.cpp  test_kref.cpp  test_streaming.cpp  test_token_loader.cpp  test_types.cpp
cpp/tests/integration/: test_api_live.cpp  test_security.cpp  test_workflow.cpp
dart/: .gitignore  pubspec.yaml
dashboard/: Cargo.toml  README.md
dashboard/scripts/: install.ps1  install.sh
dashboard/src/: access.rs  config.rs  fetch.rs  live.rs  main.rs  model.rs  trace.rs
dashboard/static/: brain.css  brain.js  gl.js  index.html
docs/: API.md  PARITY.md  RELEASING.md  conf.py  requirements.txt
go/: .gitignore  Makefile  README.md  artifact.go  bundle.go  client.go  client_api.go  discovery.go  doc.go  edge.go  errors.go  event.go  go.mod  integration_test.go  item.go  kref.go  kref_test.go  parity_test.go  project.go  revision.go  space.go  token.go
include/: kumiho.h
kumiho-cli/: README.md
kumiho-memory/: README.md  RELEASE_NOTES.md  pyproject.toml
python/: .gitignore  .readthedocs.yaml  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.py  test_consolidation.py
python/.github/workflows/: cli-publish.yml  docs-publish.yml  memory-publish.yml
python/docs/: conf.py  requirements.txt
python/kumiho/: .env.local  __init__.py  _bootstrap.py  _token_loader.py  artifact.py  auth_cli.py  base.py  client.py  collection.py  discovery.py  edge.py  event.py  group.py  item.py  kref.py  link.py  mcp_server.py  product.py  project.py  resource.py  revision.py  space.py  test_direct_connect.py  test_discovery.py  version.py
python/kumiho-cli/: README.md  pyproject.toml
python/kumiho-cli/kumiho_cli/: __init__.py  cli.py
python/kumiho-cli/tests/: test_cli.py
python/kumiho-memory/: README.md  RELEASE_NOTES.md  pyproject.toml
python/kumiho-memory/docs/: DECISION_MEMORY_DESIGN.md  ONTOLOGY_PRINCIPLES_GAP.md  SESSION_MINING_DESIGN.md
python/kumiho-memory/kumiho_memory/: __init__.py  __main__.py  _bounded.py  _graph_walk.py  assessors.py  code_capture.py  code_decisions.py  code_query.py  code_session.py  context_compose.py  dream_state.py  entity_promotion.py  evidence.py  evidence_rank.py  failure_ledger.py  graph_augmentation.py  graph_maintenance.py  grounding.py  mcp_tools.py  memory_manager.py  ontology.py  ontology_spec.py  predicate_registry.py  privacy.py  recall_rerank.py  redis_memory.py  relations.py  retry.py  skill_ingest.py  skill_scan.py  space_profiler.py  summarization.py  temporal_guard.py  trust_vocab.py  valid_time.py
python/kumiho-memory/scripts/: dogfood_code_memory.py  dogfood_dream_maintenance.py  dogfood_loe_code.py  dogfood_ontology_agent.py  dogfood_session_memory.py  recall_bytediff.py
python/kumiho-memory/tests/: fakes.py  test_assessors_evidence.py  test_code_capture.py  test_code_isolation.py  test_code_query.py  test_code_session.py  test_context_compose.py  test_decompose_project_targeting.py  test_dream_state.py  test_embedding_fact_dedup.py  test_entity_promotion.py  test_evidence.py  test_evidence_rank.py  test_failure_ledger.py  test_gemini_live.py  test_graph_augmentation.py  test_graph_maintenance.py  test_graph_recall_rerank.py  test_grounding_ripple.py  test_main.py  test_mcp_background_assess.py  test_mcp_tools.py  test_memory_manager.py  test_ontology.py  test_ontology_agent.py  test_ontology_alias_resolution.py  test_ontology_spec.py  test_ontology_valid_time_write.py  test_openai_live.py  test_predicate_registry.py  test_prellm_redaction.py  test_privacy.py  test_recall_manager_env_widen.py  test_recall_query_redaction.py  test_recall_rerank.py  test_redis_memory.py  test_reflect_batch.py  test_retry.py  test_sibling_fallback.py  test_sibling_llm_cap.py  (+7 more)
python/kumiho/proto/: kumiho_pb2.py  kumiho_pb2.pyi  kumiho_pb2_grpc.py
python/python/: README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
python/python/docs/: changelog.md  conf.py
python/python/kumiho/: __init__.py  _bootstrap.py  _text.py  artifact.py  auth_cli.py  client.py  discovery.py  edge.py  event.py  item.py  kref.py  mcp_server.py  project.py  revision.py  space.py
python/python/kumiho/proto/: kumiho_pb2.py  kumiho_pb2.pyi  kumiho_pb2_grpc.py
python/python/tests/: test_mcp_server_lifecycle.py  test_mcp_watchdog_selection.py
python/tests/: conftest.py  mock_helpers.py  test_api.py  test_auto_login.py  test_bootstrap.py  test_discovery.py  test_graph_traversal.py  test_kref.py  test_live_e2e.py  test_mcp_server.py  test_performance.py  test_safeguards.py  test_streaming.py  test_version.py
rust/: Cargo.toml  README.md  build.rs
rust/examples/: quickstart.rs
rust/src/: client.rs  discovery.rs  edge.rs  error.rs  kref.rs  lib.rs  token_loader.rs
rust/src/models/: artifact.rs  bundle.rs  event.rs  item.rs  mod.rs  project.rs  revision.rs  space.rs
rust/tests/: integration.rs  kref.rs
src/: artifact.cpp  client.cpp  collection.cpp  discovery.cpp  edge.cpp  item.cpp  kref.cpp  link.cpp  product.cpp  project.cpp  revision.cpp  space.cpp  token_loader.cpp
tests/: conftest.py  mock_helpers.py  test_api.cpp  test_api.py  test_collection.py  test_discovery.cpp  test_discovery.py  test_graph_traversal.py  test_kref.cpp  test_live_e2e.py  test_performance.py  test_resolve_location.py  (+8 more)
(+81 files in other folders)
