[package]
name = "kumiho-brain"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Kumiho Brain — real-time WebGL dashboard for the living Kumiho memory graph"
license = "MIT"
publish = false

# Dogfoods the Rust SDK (kumiho-SDKs#57): the crate is the only data path to
# kumiho-server; the dashboard adds an axum web layer + a WebGL2 frontend.
[dependencies]
kumiho = { path = "../rust" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace]
